Added firefox settings (`user.js` and `chrome/userChorme.css`). As well as files for Stow

--- a/firefox/.stow-local-ignore
+++ b/firefox/.stow-local-ignore
@@ -22,6 +22,5 @@ _darcs
 ^/LICENSE.*
 ^/COPYING
 
-^/\.config/zsh(/|$)
-^/\.config/firefox(/|$)
+^/setup-firefox-profile.sh
 # note: thought i'd need to add `\.gitmodules` but it's already here
