Edits to hyprpaper script [can ignore this lol]. Added `swww` config (which really is just the actual wallpaper script). Used `setup.sh` so `.stow-local-ignore` is set for linux currently.

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -29,6 +29,4 @@ _darcs
 
 
 # --- Ignore Script --- #
-^/\.config/Thunar(/|$)
-^/\.config/hypr(/|$)
-^/\.config/kitty(/|$)
+^/\.config/ghostty(/|$)
