Added wofi wallpaper-picker and keybind for it. Moved swww into dotfiles and adjusted `os-ignore` as needed. Fixed(wrote) the discord version updater script.

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -26,7 +26,8 @@ bind = $mod, B, exec, killall -SIGUSR1 waybar  # toggle waybar
 bind = $mod SHIFT, B, exec, pkill waybar && waybar & disown  # restart waybar
 
 # Wallpaper (swww)
-bind = $mod SHIFT, W, exec, $HOME/.config/swww/random.sh
+bind = $mod SHIFT, W, exec, $HOME/dotfiles/.config/swww/random.sh
+bind = $mod, W, exec, $HOME/dotfiles/.config/wofi/wallpaper-switcher.sh
 
 # Screenshots | help: $ grimblast -h
 bind = $mod, PRINT, exec, grimblast --freeze copysave active ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m).jpg
