--- a/stownt/.setup/os-ignore.jsonc
+++ b/stownt/.setup/os-ignore.jsonc
@@ -3,9 +3,11 @@
 // NOTE: no comma on the last item in a list, etc.
 {
     "mac": [  // Add directories/files you want to ignore on mac
-        "^/\.config/Thunar(/|$)",
         "^/\.config/hypr(/|$)",
-        "^/\.config/kitty(/|$)"
+        "^/\.config/kitty(/|$)",
+        "^/\.config/swww(/|$)",
+        "^/\.config/Thunar(/|$)",
+        "^/\.config/wofi(/|$)"
     ],
     "linux": [  // Add directories/files you want to ignore on linux
         "^/\.config/ghostty(/|$)"
