Added keymaps for saving (w and w/out auto-formatting). Added configs for java lsp

--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -33,7 +33,9 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 workspace = 1, monitor:DP-1
 workspace = 2, monitor:DP-1
 workspace = 3, monitor:DP-1
+workspace = 4, monitor:DP-1
 
+workspace = 6, monitor:DP-2, layoutopt:orientation:top
 workspace = 7, monitor:DP-2, layoutopt:orientation:top
 workspace = 8, monitor:DP-2, layoutopt:orientation:top
 workspace = 9, monitor:DP-2, layoutopt:orientation:top, default:true
