--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -8,6 +8,7 @@
 # Google Drives
 exec-once=rclone --vfs-cache-mode writes mount smorf_boi: ~/Google\ Drives/smorf_boi &
 exec-once=rclone --vfs-cache-mode writes mount andedavi944: ~/Google\ Drives/andedavi944 &
+# exec-once=rclone --vfs-cache-mode writes mount school: ~/Google\ Drives/david1.anderson &
 
 # Wallpaper | https://github.com/LGFae/swww | help: https://www.youtube.com/watch?v=gjrVunNPj5c
 exec-once = swww init
