--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,35 +1,100 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "source": "arch_small",
+    "padding": {
+      "top": 1,
+      "bottom": 2,
+      "left": 2,
+      "right": 2
+    }
+  },
+  "display": {
+    "separator": ""
+  },
   "modules": [
-    "title",
-    "separator",
-    "uptime",
-    "host",
-    "kernel",
-    "os",
-    "cpu",
-    "gpu",
-    "memory",
-    "swap",
-    "disk",
-    "display",
-    "separator",
-    "de",
-    "wm",
+    {
+      "type": "custom",
+      "key": "Hardware  ",
+    },
+    {
+      "type": "cpu",
+      "key": " ├─   ",
+      "format": "{1} @ {7}"
+    },
+    {
+      "type": "gpu",
+      "key": " ├─ 󰢮  ",
+      "format": "{2}"
+    },
+    {
+      "type": "memory",
+      "key": " └─   ",
+    },
+    // {
+    //   "type": "disk",
+    //   "key": " ├─   ",
+    // },
+    // {
+    //   "type": "display",
+    //   "key": " ├─ 󰍹  ",
+    // },
+    {
+      "type": "custom",
+      "key": " ",
+    },
+    {
+      "type": "custom",
+      "key": "Software  "
+    },
+    {
+      "type": "kernel",
+      "key": " ├─   ",
+    },
+    {
+      "type": "os",
+      "key": " ├─   "
+    },
+    {
+      "type": "packages",
+      "key": " ├─ 󰏖  "
+    },
+    {
+      "type": "de",
+      "key": " ├─   "
+    },
+    {
+      "type": "wm",
+      "key": " └─ 󰨇  ",
+      "format": "{2} ({3})"  // {5}: version
+    },
+    {
+      "type": "custom",
+      "key": " ",
+    },
+    {
+      "type": "custom",
+      "key": "Terminal  "
+    },
     "wmtheme",
-    "theme",
-    "icons",
-    "separator",
-    "packages",
-    "shell",
-    "terminal",
-    "terminalfont",
+    {
+      "type": "shell",
+      "key": " ├─   ",
+    },
+    {
+      "type": "terminal",
+      "key": " ├─   "
+    },
     {
       "type": "terminaltheme",
-      "key": "Terminal Theme",
+      "key": " ├─   ",
       "format": "Tokyo Night"
     },
-    "break",
-    "colors"
+    {
+      "type": "terminalfont",
+      "key": " └─   "
+    },
+    // "break",
+    // "colors"
   ]
 }
