Added colored text to scripts and other readablilty aspects. Edits to ghostty and fastfetch configs..? Changed default term.-em. to Ghostty.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,8 @@
 
 
 # ------ Default Apps ----- #
-$terminal = kitty
+# $terminal = kitty
+$terminal = ghostty
 $fileManager = thunar
 $menu = wofi -c ~/.config/wofi/config -s ~/.config/wofi/style.css
 
