--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -20,8 +20,11 @@ focus-follows-mouse = true
 quit-after-last-window-closed = true
 
 # Font
-font-family = "GeistMono Nerd Font"
-font-size = 18
+# might need changing between OSes
+# Linux: GeistMono NF(P/M) <Type>
+# MacOS: GeistMono Nerd Font
+font-family = "GeistMono NFP Medium"
+font-size = 12
 window-title-font-family = "GeistMono Nerd Font"
 
 # Keybinds
