--- a/.config/fastfetch/macos-config.jsonc
+++ b/.config/fastfetch/macos-config.jsonc
@@ -1,35 +1,117 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "source": "mac",
+    "padding": {
+      "top": 1,
+      "bottom": 2,
+      "left": 2,
+      "right": 2
+    }
+  },
+  "display": {
+    "separator": ""
+  },
   "modules": [
-    "title",
-    "separator",
-    "uptime",
-    "host",
-    "kernel",
-    "os",
-    "cpu",
-    "gpu",
-    "memory",
-    "swap",
-    "disk",
-    "display",
-    "separator",
-    "de",
-    "wm",
-    "wmtheme",
-    "theme",
-    "icons",
-    "separator",
-    "packages",
-    "shell",
-    "terminal",
-    "terminalfont",
+    {
+      "type": "title",
+      "key": "   ",
+      "format": "{6}"
+    },
+    {
+      "type": "uptime",
+      "key": "   "
+    },
+    {
+      "type": "custom",
+      "key": " "
+    },
+    {
+      "type": "custom",
+      "key": "Hardware 󰪫 ",
+    },
+    {
+      "type": "host",
+      "key": " ├─   "
+    },
+    {
+      "type": "cpu",
+      "key": " ├─   ",
+    },
+    {
+      "type": "gpu",
+      "key": " ├─ 󰢮  ",
+    },
+    {
+      "type": "display",
+      "key": " ├─ 󰍹  ",
+    },
+    {
+      "type": "disk",
+      "key": " ├─   ",
+    },
+    {
+      "type": "memory",
+      "key": " ├─   ",
+    },
+    {
+      "type": "swap",
+      "key": " └─ 󰓡  "
+    },
+    {
+      "type": "custom",
+      "key": " ",
+    },
+    {
+      "type": "custom",
+      "key": "Software  "
+    },
+    {
+      "type": "kernel",
+      "key": " ├─   ",
+    },
+    {
+      "type": "os",
+      "key": " ├─   "
+    },
+    {
+      "type": "packages",
+      "key": " ├─ 󰏖  "
+    },
+    {
+      "type": "de",
+      "key": " ├─   "
+    },
+    {
+      "type": "wm",
+      "key": " └─ 󰨇  ",
+      "format": "{2} ({3})"  // {5}: version
+    },
+    {
+      "type": "custom",
+      "key": " "
+    },
+    {
+      "type": "custom",
+      "key": "Terminal  "
+    },
+    {
+      "type": "shell",
+      "key": " ├─   ",
+    },
+    {
+      "type": "terminal",
+      "key": " ├─   "
+    },
     {
       "type": "terminaltheme",
-      "key": "Terminal Theme",
+      "key": " ├─   ",
       "format": "Tokyo Night"
     },
-    "break",
-    "colors"
+    {
+      "type": "terminalfont",
+      "key": " └─   "
+    },
+    "break"
   ]
 }
