Swapped fullscreen and float hyprland keybinds. Created telescope grep exercise file. Moved plugins to `lua/config/plugins/`.

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -18,8 +18,8 @@ bind = $mod, X, exec, archlinux-logout  # logout menu
 # General
 bind = $mod, Q, killactive,  # close window
 bind = $mod, M, exit,  # return to SDDM
-bind = $mod SHIFT, F, togglefloating,
-bind = $mod, F, fullscreen
+bind = $mod, F, togglefloating,
+bind = $mod SHIFT, F, fullscreen
 
 # Waybar
 bind = $mod, B, exec, killall -SIGUSR1 waybar  # toggle waybar
