Made edits to hypr config, including adding hyprshot. Also changed a pacman alias.

--- a/.config/hypr/configs/envVariables.conf
+++ b/.config/hypr/configs/envVariables.conf
@@ -11,3 +11,5 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 
 # not sure if I use either...
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+
+#env = HYPRSHOT_DIR,"$HOME/Pictures/Screenshots/"
