--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -29,10 +29,8 @@ bind = $mod SHIFT, B, exec, pkill waybar && waybar & disown  # restart waybar
 bind = $mod SHIFT, W, exec, $HOME/dotfiles/.config/swww/random.sh
 bind = $mod, W, exec, $HOME/dotfiles/.config/wofi/wallpaper-switcher.sh
 
-# Screenshots | help: $ grimblast -h
-bind = $mod, PRINT, exec, grimblast --freeze copysave active ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m).jpg
-bind = $mod SHIFT, PRINT, exec, grimblast --freeze copysave area ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m).jpg
-bind = $mod SHIFT, S, exec, grimblast --freeze copy area
+# Screenshot (hyprshot)
+bind = $mod SHIFT, S, exec, hyprshot -m region -z
 
 # hyprpicker
 bind = $mod SHIFT, P, exec, hyprpicker -a
@@ -98,3 +96,9 @@ bindm = $mod, mouse:273, resizewindow
 # dwindle layout
 # bind = $mod, P, pseudo, # dwindle
 # bind = $mod, J, togglesplit, # dwindle
+
+# --- ARCHIVE --- #
+# Screenshots | help: $ grimblast -h
+#bind = $mod, PRINT, exec, grimblast --freeze copysave active ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m).jpg
+#bind = $mod SHIFT, PRINT, exec, grimblast --freeze copysave area ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m).jpg
+#bind = $mod SHIFT, S, exec, grimblast --freeze copy area
