--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -6,9 +6,11 @@
 # https://wiki.hyprland.org/Configuring/Keywords/#executing
 
 # Google Drives
-exec-once=rclone --vfs-cache-mode writes mount smorf_boi: ~/Google\ Drives/smorf_boi &
-exec-once=rclone --vfs-cache-mode writes mount andedavi944: ~/Google\ Drives/andedavi944 &
-# exec-once=rclone --vfs-cache-mode writes mount school: ~/Google\ Drives/david1.anderson &
+# exec-once=rclone --vfs-cache-mode writes mount smorf_boi: ~/Google\ Drives/smorf_boi &
+# exec-once=rclone --vfs-cache-mode writes mount andedavi944: ~/Google\ Drives/andedavi944 &
+
+# Hypridle
+exec-once = hypridle
 
 # Wallpaper | https://github.com/LGFae/swww | help: https://www.youtube.com/watch?v=gjrVunNPj5c
 exec-once = swww init
@@ -16,7 +18,7 @@ exec-once = swww-daemon --format xrgb
 exec-once = $HOME/.config/swww/random.sh
 
 # Waybar
-exec-once = waybar
+# exec-once = waybar
 
 # for screensharing | see: https://gist.github.com/brunoanc/2dea6ddf6974ba4e5d26c3139ffb7580#editing-the-configuration-file
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -25,6 +27,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = $menu
 
 # maybe?:
-# exec-once=hyprctl setcursor Bibata-Modern-Classic 24
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
+#
 # xdg-desktop-portal-gtk?
