More zsh conigurations: z replaced with cd (still zoxide); fzf implementation. Edits to hypr config. Ghostty no longer asks to confirm quitting.

--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -10,7 +10,7 @@
 # exec-once=rclone --vfs-cache-mode writes mount andedavi944: ~/Google\ Drives/andedavi944 &
 
 # Hypridle
-exec-once = hypridle
+# exec-once = hypridle
 
 # Wallpaper | https://github.com/LGFae/swww | help: https://www.youtube.com/watch?v=gjrVunNPj5c
 exec-once = swww init
