--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@
 # ------ Default Apps ----- #
 # $terminal = kitty
 $terminal = ghostty
-$fileManager = thunar
+# $fileManager = thunar
 $menu = wofi -c ~/.config/wofi/config -s ~/.config/wofi/style.css
 
 
