--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -18,6 +18,7 @@ title = "Ghostty"
 # window-inherit-working-directory = true
 focus-follows-mouse = true
 quit-after-last-window-closed = true
+confirm-close-surface = false
 
 # Font
 # might need changing between OSes
