--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -30,7 +30,7 @@ bind = $mod SHIFT, W, exec, $HOME/dotfiles/.config/swww/random.sh
 bind = $mod, W, exec, $HOME/dotfiles/.config/wofi/wallpaper-switcher.sh
 
 # Screenshot (hyprshot)
-bind = $mod SHIFT, S, exec, hyprshot -m region -z
+bind = $mod SHIFT, S, exec, hyprshot -z -m region -o "$HOME/Pictures/Screenshots/"
 
 # hyprpicker
 bind = $mod SHIFT, P, exec, hyprpicker -a
