Something I did fixed it..? but cursor is orange, so...

--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -9,7 +9,7 @@
 # ------ Window Rules ----- #
 # windowrule = rule, window
 
-windowrule = float, class:(Zoom)
+# windowrule = float, class:(Zoom)
 
 windowrulev2 = workspace 3, class:(Chromium)  # open chromium in workspace 3
 windowrulev2 = workspace 7, title:.*(Thunderbird)$
