--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -27,7 +27,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = $menu
 
 # maybe?:
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+# exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
 #
 # xdg-desktop-portal-gtk?
