--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -26,8 +26,8 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # Wofi
 exec-once = $menu
 
-# maybe?:
-# exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+# hopefully doesn't stall apps on startup :/
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
 #
 # xdg-desktop-portal-gtk?
