Added configs for 'satty' a screenshot editor (really a picture editor but that's what I'm using it for). Also added secondary 'keybind' alias.

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -30,7 +30,8 @@ bind = $mod SHIFT, W, exec, $HOME/dotfiles/.config/swww/random.sh
 bind = $mod, W, exec, $HOME/dotfiles/.config/wofi/wallpaper-switcher.sh
 
 # Screenshot (hyprshot)
-bind = $mod SHIFT, S, exec, hyprshot -z -m region -o "$HOME/Pictures/Screenshots/"
+# bind = $mod SHIFT, S, exec, hyprshot -z -m region -o "$HOME/Pictures/Screenshots/"
+bind = $mod SHIFT, S, exec, hyprshot -r -z -m region --clipboard-only | satty -f -
 
 # hyprpicker
 bind = $mod SHIFT, P, exec, hyprpicker -a
