--- a/.config/satty/config.toml
+++ b/.config/satty/config.toml
@@ -12,7 +12,7 @@ copy-command = "wl-copy"
 # Increase or decrease the size of the annotations | default = 2
 annotation-size-factor = 1
 # Filename to use for saving action. Omit to disable saving to file. Might contain format specifiers: https://docs.rs/chrono/latest/chrono/format/strftime/index.html
-output-filename = "~/Pictures/Screenshots/%Y-%m-%d_%H:%M:%S_satty.jpg"
+output-filename = "~/Pictures/Screenshots/%Y-%m-%d_%H:%M:%S_satty.png"
 # Action to perform when the Enter key is pressed [possible values: save-to-clipboard, save-to-file]
 action-on-enter = "save-to-clipboard"
 # After copying the screenshot, save it to a file as well
