Added yazi configs and hyprland keybind for yazi. Added ncmpcpp and mpd for music playing. Made edit to `.zshrc` to ensure mpd is running. Updated `os-ignore.json` to reflect additions.

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -11,7 +11,7 @@ $mod = SUPER
 
 # Applications
 bind = $mod, Return, exec, $terminal  # kitty
-bind = $mod SHIFT, Return, exec, $fileManager  # thunar
+bind = $mod SHIFT, Return, exec, $fileManager  # yazi
 bind = $mod, Space, exec, $menu  # wofi
 bind = $mod, X, exec, archlinux-logout  # logout menu
 
