--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@
 # $terminal = kitty
 $terminal = ghostty
 # $fileManager = thunar
+$fileManager = ghostty -e yazi
 $menu = wofi -c ~/.config/wofi/config -s ~/.config/wofi/style.css
 
 
