Added/Updated Git aliases. Updated Brewfile and brew install script. Added `.gitconfig` file for global Git configurations.

--- a/stownt/.setup/Brewfile
+++ b/stownt/.setup/Brewfile
@@ -6,36 +6,55 @@ tap "osx-cross/arm"
 tap "osx-cross/avr"
 tap "qmk/qmk"
 brew "qmk/qmk/qmk"
-brew "wget"
-# cask "xquartz"
+cask "qmk-toolbox"
+brew "icu4c@77"
+
+# Programming
+brew "go"
+brew "gopls"
+brew "lua"
+brew "luacheck"
+brew "node"
+brew "pnpm"
 
 # System/Terminal
+brew "bat"
+brew "eza"
+brew "fastfetch"
 cask "font-geist-mono-nerd-font"
-cask "ghostty"
-brew "stow"
-brew "zoxide"
 brew "fzf"
 brew "git"
-brew "fastfetch"
-brew "neovim"
+brew "git-crypt"
+brew "shellcheck"
+brew "stow"
+brew "tree"
+brew "wget"
+brew "zoxide"
 
 # Utilities
-cask "appcleaner"
-cask "raycast"
 cask "cheatsheet"
 cask "hiddenbar"
-cask "topnotch"
 cask "keka"
+cask "raycast"
+cask "rectangle"
+cask "topnotch"
 cask "the-unarchiver"
 
-# Major Apps
+# Apps
+cask "appcleaner"
 cask "arc"
 cask "autodesk-fusion"
 cask "discord"
+cask "firefox"
 cask "fl-studio"
+cask "ghostty"
+brew "neovim"
+cask "obsidian"
+cask "proton-pass"
 cask "prusaslicer"
-cask "qmk-toolbox"
 cask "steam"
 cask "tor-browser"
-cask "vscodium"
+cask "vlc"
+cask "vnc-viewer"
+cask "zen-browser"
 cask "zoom"
