Edits to hypr and zsh configs.

--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -10,6 +10,7 @@
 # windowrule = rule, window
 
 # windowrule = float, class:(Zoom)
+windowrulev2 = workspace 8, class:(grade-tracker)
 
 windowrulev2 = workspace 3, class:(Chromium)  # open chromium in workspace 3
 windowrulev2 = workspace 7, title:.*(Thunderbird)$
