--- a/.config/hypr/configs/monitors.conf
+++ b/.config/hypr/configs/monitors.conf
@@ -11,13 +11,13 @@
 
 
 # main: normal | 2nd: vertical (flipped) & on right
-# monitor=DP-1,1920x1080@144,0x420 ,1
-# monitor=DP-2,1920x1200    ,1920x0,1,transform,1
+monitor=DP-1,1920x1080@144,0x420 ,1
+monitor=DP-2,1920x1200    ,1920x0,1,transform,1
 
 
 # main: normal | 2nd: vertical & on left
-monitor=DP-1,1920x1080@144,1200x420,1
-monitor=DP-2,1920x1200    ,0x0     ,1,transform,3
+# monitor=DP-1,1920x1080@144,1200x420,1
+# monitor=DP-2,1920x1200    ,0x0     ,1,transform,3
 
 #               1200
 # |‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
