Added alt & ctrl backspacing. Added hyprpanel configs. Edits to aliases. Moved zsh plugin manager out of configs directory to fix alt & ctrl issue. Made edits to zshrc as such.

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -10,7 +10,7 @@
 $mod = SUPER
 
 # Applications
-bind = $mod, Return, exec, $terminal  # kitty
+bind = $mod, Return, exec, $terminal  # ghostty
 bind = $mod SHIFT, Return, exec, $fileManager  # yazi
 bind = $mod, Space, exec, $menu  # wofi
 bind = $mod, X, exec, archlinux-logout  # logout menu
