--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -13,6 +13,7 @@
 # exec-once = hypridle
 
 # Wallpaper | https://github.com/LGFae/swww | help: https://www.youtube.com/watch?v=gjrVunNPj5c
+exec-once = hyprpanel
 exec-once = swww init
 exec-once = swww-daemon --format xrgb
 exec-once = $HOME/.config/swww/random.sh
