--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -433,7 +433,7 @@
   "theme.osd.enable": true,
   "menus.clock.time.military": true,
   "menus.clock.time.hideSeconds": false,
-  "menus.clock.weather.location": "Toronto",
+  "menus.clock.weather.location": "London, ON",
   "menus.clock.weather.unit": "metric",
   "bar.layouts": {
     "0": {
@@ -496,7 +496,7 @@
   "menus.dashboard.shortcuts.right.shortcut3.command": "bash -c \"/usr/share/hyprpanel/scripts/snapshot.sh\"",
   "menus.dashboard.shortcuts.left.shortcut4.command": "wofi -c ~/.config/wofi/config -s ~/.config/wofi/style.css",
   "menus.dashboard.powermenu.confirmation": true,
-  "menus.clock.weather.key": "$HOME/Weather/weather-api.json",
+  "menus.clock.weather.key": "/home/trinxic/Weather/weather.json",
   "menus.dashboard.shortcuts.enabled": true,
   "menus.dashboard.directories.enabled": false,
   "theme.bar.menus.menu.dashboard.scaling": 60,
